Update metadata and workflows for PHP 8 support

--- a/.horde.yml
+++ b/.horde.yml
@@ -27,25 +27,25 @@ state:
   release: stable
   api: stable
 license:
-  identifier: LGPL-2.1
+  identifier: LGPL-2.1-only
   uri: http://www.horde.org/licenses/lgpl21
 dependencies:
   required:
-    php: ^5.3 || ^7
-    pear:
-      pear.horde.org/Horde_Cache: ^2
-      pear.horde.org/Horde_Exception: ^2
-      pear.horde.org/Horde_Kolab_Format: ^2
-      pear.horde.org/Horde_Mime: ^2
-      pear.horde.org/Horde_Translation: ^2.2
-      pear.horde.org/Horde_Support: ^2
-      pear.horde.org/Horde_Util: ^2
+    php: ^7.4 || ^8
+    composer:
+      horde/cache: ^3
+      horde/exception: ^3
+      horde/kolab_format: ^3
+      horde/mime: ^3
+      horde/translation: ^3
+      horde/support: ^3
+      horde/util: ^3
   optional:
-    pear:
-      pear.horde.org/Horde_Imap_Client: ^2.14
-      pear.horde.org/Horde_History: ^2
-      pear.horde.org/Horde_Test: ^2.1
-      pear.php.net/HTTP_Request: '*'
-      pear.php.net/Net_IMAP: ^1.1
+    composer:
+      horde/imap_client: ^3
+      horde/history: ^3
+      horde/test: ^3
+      pear/http_request: '*'
+      pear/net_imap: *
     ext:
       imap: '*'
